<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="facebook_app_id">1391519387815847</string>
    <string name="app_name">Flies The Flag</string>
    <string name="quiz">Quiz</string>
    <string name="choices">Select Number of Choices</string>
    <string name="correct">correct</string>
    <string name="guess_country">Guess the Country</string>
    <string name="guesses">guesses</string>
    <string name="incorrect_answer">Incorrect!</string>
    <string name="more_regions_title">More Regions Required</string>
    <string name="more_regions_message">There are not enough countries in 
      the selected regions. Please select more regions.</string>
    <string name="of">of</string>
    <string name="ok">OK</string>
    <string name="question">Question</string>
    <string name="quiz_title">Ten Question Flag Quiz</string>
    <string name="regions">Select Regions</string>
    <string name="reset_quiz">Reset Quiz</string>
    <string name="socialshare_text">Social Share</string>

    <string-array name="regionsList">
        <item>Africa</item>
        <item>Asia</item>
        <item>Europe</item>
        <item>North_America</item>
        <item>Oceania</item>
        <item>South_America</item>
    </string-array>
    <string-array name="guessesList">
        <item>3</item>
        <item>6</item>
        <item>9</item>
    </string-array>

    <string name="about_text">\
Mobmaxime is an established Web and Mobile Application Development Company delivering Xamarin, Appcelerator, Native android and iOS applications. www.mobmaxime.com</string>
    <string name="about_company">About MobMaxime</string>
    <string name="title_activity_home">Flies The Flag</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="game_name">FlagQuizGame</string>
    <string name="quiz_game">Start Quiz Game</string>
    <string name="about_us">About Us</string>
    <string name="rate_us">Rate Us</string>
    <string name="share_us">Share</string>
    <string name="exit_label">Exit</string>
    <string name="level">Level</string>
    <string name="level_1">Level 1</string>
    <string name="level_2">Level 2</string>
    <string name="level_3">Level 3</string>
    <string name="facebook_text">Facebook</string>
    <string name="twitter_text">Twitter</string>
    <string name="google_text">Google+</string>

</resources>