<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="30dip">


    <Button
        android:id="@+id/start_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        android:background="@drawable/round_button"
        android:fontFamily="@font/amaticsc_bold"
        android:text="@string/quiz_game"
        android:textColor="@color/White"
        android:textSize="36dp" />

    <Button
        android:id="@+id/level_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/round_button"
        android:text="@string/level"
        android:textColor="@color/White"
        android:textSize="36dp"
        android:fontFamily="@font/amaticsc_bold"
        />

    <Button
        android:id="@+id/about_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/round_button"
        android:text="@string/about_us"
        android:textColor="@color/White"
        android:textSize="36dp"
        android:fontFamily="@font/amaticsc_bold" />

    <Button
        android:id="@+id/rate_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/round_button"
        android:text="@string/rate_us"
        android:textColor="@color/White"
        android:textSize="36dp"
        android:fontFamily="@font/amaticsc_bold" />

    <Button
        android:id="@+id/share_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/round_button"
        android:text="@string/share_us"
        android:textColor="@color/White"
        android:textSize="36dp"
        android:fontFamily="@font/amaticsc_bold" />

    <Button
        android:id="@+id/exit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/round_button"
        android:text="@string/exit_label"
        android:textColor="@color/White"
        android:textSize="36dp"
        android:fontFamily="@font/amaticsc_bold" />

    </LinearLayout>

